# Lost-Quest

./: CMakeLists.txt  main.c
data/: bossMonsterList.data  hardMonsterList.data  itemList.data  monsterList.data  writeItemData.c  writeMonsterData.c
game/: dungeon.c  dungeon.h  item.c  item.h  monster.c  monster.h  player.c  player.h
menu/: cheats.c  cheats.h  inventory.c  inventory.h  mainMenu.c  mainMenu.h  map.c  map.h  options.c  options.h  skills.c  skills.h  titlescreen.c  titlescreen.h
utils/: audio.c  audio.h  settings.c  settings.h  utils.c  utils.h  windowsFunctions.c  windowsFunctions.h
