cmake_minimum_required(VERSION 3.23)
project(LostQuest C)

set(CMAKE_C_STANDARD 99)

# Header Files
file(GLOB_RECURSE GAME_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/game/*.c")
file(GLOB_RECURSE MENU_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/menu/*.c")
file(GLOB_RECURSE UTILS_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/utils/*.c")
set(SOURCE_FILES ${GAME_SOURCE_FILES} ${MENU_SOURCE_FILES} ${UTILS_SOURCE_FILES})

# Source Files
file(GLOB_RECURSE GAME_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/game/*.h")
file(GLOB_RECURSE MENU_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/menu/*.h")
file(GLOB_RECURSE UTILS_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/utils/*.h")
set(HEADER_FILES ${GAME_HEADER_FILES} ${MENU_HEADER_FILES} ${UTILS_HEADER_FILES})

# Audio Files
file(GLOB_RECURSE WAV_FILES "data/sound/*.wav")

# Data Files
file(GLOB_RECURSE DATA_FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/*.data")

# Add Files to Executable
add_executable(LostQuest main.c ${SOURCE_FILES} ${HEADER_FILES} ${WAV_FILES} ${DATA_FILES})

# Link Libraries
target_link_libraries(LostQuest winmm)